Fixed UL bullets not aligning to left

--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
 
 
-
 * {
-  text-align: center;
-}
+    justify-content: left;
+    justify-items: left;
+    justify-self: left;
+} 
 
 
 header {
@@ -15,7 +16,7 @@ header {
   border-width: 5px;
   margin: 2px;
   padding: 3px;
-
+  text-align: center;
 }
 
 
@@ -30,20 +31,21 @@ nav{
   margin: 10px;
   padding: 3px;
   display: inline-flex;
-  
-
-
 }
 
 
 h1 {
+
+  text-align: center;
   font-family: 'Montserrat', sans-serif;
   font-weight: 800;
-  font-size: 2.5rem;
+  font-size: 2.5rem;  
 }
 
 
 h2 {
+
+  text-align: center;
   font-family: 'Montserrat', sans-serif;
   font-weight: 600;
   font-size: 1.2rem;
@@ -55,11 +57,13 @@ h2 {
 
 
 main {
+  text-align: center;
 
 }
 
 
 body{
+
   font-family: 'Roboto Condensed', sans-serif;
   font-weight: 500;
   font-size: 1.0rem;
@@ -69,16 +73,20 @@ body{
 }
 
 ul {
+
   display: inline-block;
   background-color: rgba(255, 255, 255, 0.7);
   padding: 1rem;
   margin: 10px;
   padding: 5px;
-  
+  border-style: solid;
+  border-color: black;
+  border-width: 1px;
+  list-style: disc;
+  list-style-position: inside;
+  text-align: left;
+    
 }
-
-}
-
 
 footer {
 
